--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "dependencies": {
     "react": "16.0.0-alpha.12",
     "react-native": "0.47.1",
-    "react-native-swiper": "^1.5.7"
+    "react-native-side-menu": "^1.0.2",
+    "react-native-swiper": "^1.5.7",
+    "react-native-vector-icons": "^4.3.0"
   },
   "devDependencies": {
     "babel-jest": "20.0.3",
