--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-native": "0.47.1",
     "react-native-side-menu": "^1.0.2",
     "react-native-swiper": "^1.5.7",
-    "react-native-vector-icons": "^4.3.0"
+    "react-native-vector-icons": "^4.3.0",
+    "react-navigation": "^1.0.0-beta.11"
   },
   "devDependencies": {
     "babel-jest": "20.0.3",
