--- a/package.json
+++ b/package.json
@@ -9,9 +9,15 @@
   "dependencies": {
     "react": "16.0.0-alpha.12",
     "react-native": "0.47.1",
+    "react-native-animatable": "^1.2.3",
+    "react-native-linear-gradient": "^2.2.0",
+    "react-native-orientation": "^3.0.0",
     "react-native-side-menu": "^1.0.2",
     "react-native-swiper": "^1.5.7",
+    "react-native-tab-view": "0.0.69",
     "react-native-vector-icons": "^4.3.0",
+    "react-native-video": "^1.2.0",
+    "react-native-video-controls": "^1.4.0",
     "react-navigation": "^1.0.0-beta.11"
   },
   "devDependencies": {
